Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyNFu6bgFSc6sthAShZaDoOk",
+      "authorship_tag": "ABX9TyOaiEn1s0vdcGajKj5kfNOO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2402,6 +2402,124 @@
           },
           "metadata": {},
           "execution_count": 53
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### ndarray vs matrix"
+      ],
+      "metadata": {
+        "id": "fe21keF0bBj4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 두 클래스 비교\n",
+        "np.ndarray.__bases__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "u4SMYR6ibE66",
+        "outputId": "ad2b19bd-a561-425a-d69a-5955e64d0e63"
+      },
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(object,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 55
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "np.matrix.__bases__"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XjqicpGibgfj",
+        "outputId": "41166356-2eda-41fb-fc95-3ed9ff0a7c22"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(numpy.ndarray,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 56
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# array함수로 만든 배열\n",
+        "l1 = np.array([1,2,3,4,5,6,7,8])\n",
+        "l1.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o3JyUWeMcnAi",
+        "outputId": "38d03108-df87-4b3d-92b3-b57b7fa342c9"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(8,)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 58
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# matrix함수로 만든 배열\n",
+        "m1 = np.matrix([1,2,3,4,5,6,7,8])\n",
+        "m1.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "B1xWjbfVcuOo",
+        "outputId": "d9d4b96f-e7cd-4c53-9956-462bf3aa44e8"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1, 8)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 59
         }
       ]
     }
