Colaboratory를 통해 생성됨

--- a/배열구조_이해하기.ipynb
+++ b/배열구조_이해하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1x6WFvKQEhZHrxWXDSi2A54HN3DFfqdCm",
-      "authorship_tag": "ABX9TyOaiEn1s0vdcGajKj5kfNOO",
+      "authorship_tag": "ABX9TyNTLJg3yKHI2s3Nn14itq4H",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2520,6 +2520,116 @@
           },
           "metadata": {},
           "execution_count": 59
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# reshape()사용 시 원소 개수는 유지해야함.\n",
+        "l2 = l1.reshape(2,4)\n",
+        "l2.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xH0lN06EeSbL",
+        "outputId": "94b8f91a-e7a4-4696-ecf7-357e19bdb468"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 60
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "m2 = m1.reshape(2,4)\n",
+        "m2.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SMo8v6hRedqy",
+        "outputId": "fee7aec6-c191-4980-8670-1573fcfa4175"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 4)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 61
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 다차원 배열 3차원으로 변경하기\n",
+        "l3 = l2.reshape(2,2,2)\n",
+        "l3.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nc0BlXvremn7",
+        "outputId": "3aa76565-5ec0-4110-bb49-a91d4144009b"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 2, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# matrix는 3차원으로 변경 시 예외 발생\n",
+        "try : \n",
+        "  m3 = m2.reshape(2,2,2)\n",
+        "except Exception as e : \n",
+        "  print('예외', e)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oQpUMSnGex65",
+        "outputId": "91063030-41a2-405a-dab4-dff203583662"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "예외 shape too large to be a matrix.\n"
+          ]
         }
       ]
     }
